# z-art-strava

./: .gitignore  README.md  blog.md  config.py  hclient.py  iclient.py  intervals-openapi-spec.json  main.py  plotfunctions.py  polar_load_data.py  pyproject.toml  strava_annotate.py  strava_initial_analysis.py  util.py
